// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders correctly 1`] = `
<Checkbox>
  <CheckboxWrapper>
    <div
      className="css-1uy26qj-CheckboxWrapper e1cvbq3x0"
    >
      <CheckboxInput
        type="checkbox"
      >
        <input
          className="css-wpqlyv-CheckboxInput e1cvbq3x1"
          type="checkbox"
        />
      </CheckboxInput>
      <CheckboxBorder>
        <div
          className="css-o957np-CheckboxBorder e1cvbq3x2"
        />
      </CheckboxBorder>
      <CheckboxIcon
        name="done"
        size={24}
        title={null}
      >
        <Base
          className="css-1sa9cqu-Icon-CheckboxIcon e1cvbq3x3"
          name="done"
          size={24}
          title={null}
        >
          <StyledSvg
            className="css-1sa9cqu-Icon-CheckboxIcon e1cvbq3x3"
            fill="currentcolor"
            height={24}
            title="done"
            viewBox="0 0 24 24"
            width={24}
          >
            <svg
              className="e1cvbq3x3 css-l79hfo-StyledSvg-Icon-CheckboxIcon e1pa9kzm0"
              fill="currentcolor"
              height={24}
              title="done"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
              />
            </svg>
          </StyledSvg>
        </Base>
      </CheckboxIcon>
    </div>
  </CheckboxWrapper>
</Checkbox>
`;

exports[`<Checkbox /> when checked renders correctly 1`] = `
<Checkbox
  defaultChecked={true}
>
  <CheckboxWrapper>
    <div
      className="css-1uy26qj-CheckboxWrapper e1cvbq3x0"
    >
      <CheckboxInput
        defaultChecked={true}
        type="checkbox"
      >
        <input
          className="css-wpqlyv-CheckboxInput e1cvbq3x1"
          defaultChecked={true}
          type="checkbox"
        />
      </CheckboxInput>
      <CheckboxBorder>
        <div
          className="css-o957np-CheckboxBorder e1cvbq3x2"
        />
      </CheckboxBorder>
      <CheckboxIcon
        name="done"
        size={24}
        title={null}
      >
        <Base
          className="css-1sa9cqu-Icon-CheckboxIcon e1cvbq3x3"
          name="done"
          size={24}
          title={null}
        >
          <StyledSvg
            className="css-1sa9cqu-Icon-CheckboxIcon e1cvbq3x3"
            fill="currentcolor"
            height={24}
            title="done"
            viewBox="0 0 24 24"
            width={24}
          >
            <svg
              className="e1cvbq3x3 css-l79hfo-StyledSvg-Icon-CheckboxIcon e1pa9kzm0"
              fill="currentcolor"
              height={24}
              title="done"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
              />
            </svg>
          </StyledSvg>
        </Base>
      </CheckboxIcon>
    </div>
  </CheckboxWrapper>
</Checkbox>
`;

exports[`<Checkbox /> when disabled renders correctly 1`] = `
<Checkbox
  disabled={true}
>
  <CheckboxWrapper>
    <div
      className="css-1uy26qj-CheckboxWrapper e1cvbq3x0"
    >
      <CheckboxInput
        disabled={true}
        type="checkbox"
      >
        <input
          className="css-wpqlyv-CheckboxInput e1cvbq3x1"
          disabled={true}
          type="checkbox"
        />
      </CheckboxInput>
      <CheckboxBorder>
        <div
          className="css-o957np-CheckboxBorder e1cvbq3x2"
        />
      </CheckboxBorder>
      <CheckboxIcon
        name="done"
        size={24}
        title={null}
      >
        <Base
          className="css-1sa9cqu-Icon-CheckboxIcon e1cvbq3x3"
          name="done"
          size={24}
          title={null}
        >
          <StyledSvg
            className="css-1sa9cqu-Icon-CheckboxIcon e1cvbq3x3"
            fill="currentcolor"
            height={24}
            title="done"
            viewBox="0 0 24 24"
            width={24}
          >
            <svg
              className="e1cvbq3x3 css-l79hfo-StyledSvg-Icon-CheckboxIcon e1pa9kzm0"
              fill="currentcolor"
              height={24}
              title="done"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
              />
            </svg>
          </StyledSvg>
        </Base>
      </CheckboxIcon>
    </div>
  </CheckboxWrapper>
</Checkbox>
`;
